package com.insurance.policy.application.dto;

import jakarta.validation.constraints.NotBlank;
import jakarta.validation.constraints.NotNull;
import jakarta.validation.constraints.Positive;

/**
 * Coverage DTO for API requests.
 *
 * @author Generated by BMAD Spring Boot Clean Architecture Generator
 */
public record CoverageDto(
    @NotBlank(message = "Coverage type is required")
    String coverageType,

    @NotNull(message = "Premium amount is required")
    @Positive(message = "Premium amount must be positive")
    Double premiumAmount,

    @NotBlank(message = "Currency is required")
    String currency
) {
}
