package com.insurance.policy.infrastructure.adapter.persistence.entity;

import com.insurance.policy.domain.valueobject.PolicyStatus;
import jakarta.persistence.*;
import java.math.BigDecimal;
import java.time.LocalDate;

/**
 * JPA Entity for Policy persistence.
 *
 * Maps domain entity to database table.
 * This is part of the infrastructure layer and should not contain business logic.
 *
 * @author Generated by BMAD Spring Boot Clean Architecture Generator
 */
@Entity
@Table(name = "policies")
public class PolicyJpaEntity {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(name = "policy_number", unique = true, nullable = false)
    private String policyNumber;

    @Column(name = "customer_id", nullable = false)
    private String customerId;

    @Column(name = "effective_date", nullable = false)
    private LocalDate effectiveDate;

    @Column(name = "expiration_date", nullable = false)
    private LocalDate expirationDate;

    @Column(name = "total_premium_amount", nullable = false, precision = 19, scale = 2)
    private BigDecimal totalPremiumAmount;

    @Column(name = "total_premium_currency", nullable = false)
    private String totalPremiumCurrency;

    @Enumerated(EnumType.STRING)
    @Column(name = "status", nullable = false)
    private PolicyStatus status;

    @Column(name = "coverages_json", columnDefinition = "TEXT")
    private String coveragesJson; // Simplified: store as JSON string

    // Constructors

    public PolicyJpaEntity() {
    }

    // Getters and Setters

    public Long getId() {
        return id;
    }

    public void setId(Long id) {
        this.id = id;
    }

    public String getPolicyNumber() {
        return policyNumber;
    }

    public void setPolicyNumber(String policyNumber) {
        this.policyNumber = policyNumber;
    }

    public String getCustomerId() {
        return customerId;
    }

    public void setCustomerId(String customerId) {
        this.customerId = customerId;
    }

    public LocalDate getEffectiveDate() {
        return effectiveDate;
    }

    public void setEffectiveDate(LocalDate effectiveDate) {
        this.effectiveDate = effectiveDate;
    }

    public LocalDate getExpirationDate() {
        return expirationDate;
    }

    public void setExpirationDate(LocalDate expirationDate) {
        this.expirationDate = expirationDate;
    }

    public BigDecimal getTotalPremiumAmount() {
        return totalPremiumAmount;
    }

    public void setTotalPremiumAmount(BigDecimal totalPremiumAmount) {
        this.totalPremiumAmount = totalPremiumAmount;
    }

    public String getTotalPremiumCurrency() {
        return totalPremiumCurrency;
    }

    public void setTotalPremiumCurrency(String totalPremiumCurrency) {
        this.totalPremiumCurrency = totalPremiumCurrency;
    }

    public PolicyStatus getStatus() {
        return status;
    }

    public void setStatus(PolicyStatus status) {
        this.status = status;
    }

    public String getCoveragesJson() {
        return coveragesJson;
    }

    public void setCoveragesJson(String coveragesJson) {
        this.coveragesJson = coveragesJson;
    }
}
